--- a/Views/Shared/_CommentsList.cshtml
+++ b/Views/Shared/_CommentsList.cshtml
@@ -65,7 +65,7 @@
         @Html.TextBoxFor(m => m.Text, new { @class = "comment-input", placeholder = "Напишіть ваш коментар тут..." })
         @Html.HiddenFor(m => m.EntityId)
         <div class="btn-container">
-            <input style="font-size: 12px;" class="add-btn" type="submit" value="Надіслати" />
+            <input style="font-size: 12px;" class="add-btn" type="submit" value="Додати" />
         </div>
     }
     <div class="comments-container">
