--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -23,6 +23,11 @@
             </div>
         </div>
         <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення підприємств (23.08.2024 / 21:47)</span>
+            <span>Додано нове поле до сутності підприємства - "Код країни". Це поле відповідає за відображення прапору країни у списку підприємств, та на сторінці визначеного підприємства.</span>
+            <span>Код країни складається обов'зязково з двух латинських літер нижчого регістру (малих). Також він обов'язково має бути існуючим</span>
+        </div>
+        <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення коментарів (23.08.2024 / 12:26)</span>
             <span>Додано можливість редагування коментарів, редагування доступне тільки автору коментаря, або користувачу з рівнем доступа 1 (Максимальний рівень).</span>
             <span>Після відправки коментаря вміст текстового поля тепер видаляється. Назва кнопки змінена з "Надіслати" на "Додати". Формат інформації щодо дати додавання коментаря змінено.</span>
@@ -31,6 +36,9 @@
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення каталогу (22.08.2024 / 13:14)</span>
             <span>Додано можливість вибору кількості обладнання при додаванні до замовлення.</span>
             <span>Додано можливість заміни кількості обладнання для замовлення з каталогу, для цього потрібно ввести нове значення кількості, та натиснути "Замінити".</span>
+        </div>
+        <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Фікси (22.08.2024 / 12:23)</span>
             <span>Виправлена помилка при зміні підприємства для контакта, коли використовується пошук.</span>
         </div>
         <div class="card-data">
