--- a/Views/EnterpriseEdit/EnterpriseEdit.cshtml
+++ b/Views/EnterpriseEdit/EnterpriseEdit.cshtml
@@ -92,6 +92,20 @@
                 @Html.TextBoxFor(m => m.Franchise, new { placeholder = "Франшиза (Якщо відсутня - залишити пустим)", @class = "data-input" })
             </div>
             <div class="form-container-row">
+                <div class="header-row"><span>Код країни: </span></div>
+                @Html.TextBoxFor(m => m.CountryCode, new
+                    {
+                        id = "CountryCode",
+                        name = "CountryCode",
+                        placeholder = "Код країни (Дві латинські літери, обов'зяково маленькі)",
+                        @class = "data-input",
+                        required = "required",
+                        maxlength = "2",
+                        pattern = "^[a-z]{2}$",
+                        title = "Введіть дві маленькі латинські літери"
+                    })
+            </div>
+            <div class="form-container-row">
                 <div class="header-row"><span>Країна: </span></div>
                 @Html.TextBoxFor(m => m.Country, new { placeholder = "Країна розташування", @class = "data-input", required = "required" })
             </div>
@@ -126,3 +140,40 @@
         }
     </div>
 </body>
+<script>
+    document.getElementById('CountryCode').addEventListener('input', function () {
+        var countryCode = this.value.toLowerCase();
+        var validCountryCodes = [
+            'ad', 'ae', 'af', 'ag', 'ai', 'al', 'am', 'ao', 'ar', 'as', 'at', 'au', 'aw', 'ax', 'az',
+            'ba', 'bb', 'bd', 'be', 'bf', 'bg', 'bh', 'bi', 'bj', 'bl', 'bm', 'bn', 'bo', 'bq', 'br',
+            'bs', 'bt', 'bv', 'bw', 'by', 'bz', 'ca', 'cc', 'cd', 'cf', 'cg', 'ch', 'ci', 'ck', 'cl',
+            'cm', 'cn', 'co', 'cr', 'cu', 'cv', 'cw', 'cx', 'cy', 'cz', 'de', 'dj', 'dk', 'dm', 'do',
+            'dz', 'ec', 'ee', 'eg', 'eh', 'er', 'es', 'et', 'fi', 'fj', 'fm', 'fo', 'fr', 'ga', 'gb',
+            'gd', 'ge', 'gf', 'gg', 'gh', 'gi', 'gl', 'gm', 'gn', 'gp', 'gq', 'gr', 'gt', 'gu', 'gw',
+            'gy', 'hk', 'hm', 'hn', 'hr', 'ht', 'hu', 'id', 'ie', 'il', 'im', 'in', 'io', 'iq', 'ir',
+            'is', 'it', 'je', 'jm', 'jo', 'jp', 'ke', 'kg', 'kh', 'ki', 'km', 'kn', 'kp', 'kr', 'kw',
+            'ky', 'kz', 'la', 'lb', 'lc', 'li', 'lk', 'lr', 'ls', 'lt', 'lu', 'lv', 'ly', 'ma', 'mc',
+            'md', 'me', 'mf', 'mg', 'mh', 'mk', 'ml', 'mm', 'mn', 'mo', 'mp', 'mq', 'mr', 'ms', 'mt',
+            'mu', 'mv', 'mw', 'mx', 'my', 'mz', 'na', 'nc', 'ne', 'nf', 'ng', 'ni', 'nl', 'no', 'np',
+            'nr', 'nu', 'nz', 'om', 'pa', 'pe', 'pf', 'pg', 'ph', 'pk', 'pl', 'pm', 'pn', 'pr', 'pt',
+            'pw', 'py', 'qa', 're', 'ro', 'rs', 'ru', 'rw', 'sa', 'sb', 'sc', 'sd', 'se', 'sg', 'sh',
+            'si', 'sj', 'sk', 'sl', 'sm', 'sn', 'so', 'sr', 'ss', 'st', 'sv', 'sx', 'sy', 'sz', 'tc',
+            'td', 'tf', 'tg', 'th', 'tj', 'tk', 'tl', 'tm', 'tn', 'to', 'tr', 'tt', 'tv', 'tz', 'ua',
+            'ug', 'um', 'us', 'uy', 'uz', 'va', 'vc', 've', 'vg', 'vi', 'vn', 'vu', 'wf', 'ws', 'ye',
+            'yt', 'za', 'zm', 'zw'
+        ];
+
+        if (countryCode.length === 2) {
+            if (!validCountryCodes.includes(countryCode)) {
+                this.setCustomValidity('Код країни недійсний.');
+                this.title = 'Код країни недійсний.';
+            } else {
+                this.setCustomValidity('');
+                this.title = 'Введіть дві маленькі латинські літери';
+            }
+        } else {
+            this.setCustomValidity('');
+            this.title = 'Введіть дві маленькі латинські літери';
+        }
+    });
+</script>
