--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -25,7 +25,7 @@
         <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення підприємств (23.08.2024 / 21:47)</span>
             <span>Додано нове поле до сутності підприємства - "Код країни". Це поле відповідає за відображення прапору країни у списку підприємств, та на сторінці визначеного підприємства.</span>
-            <span>Код країни складається обов'зязково з двух латинських літер нижчого регістру (малих). Також він обов'язково має бути існуючим</span>
+            <span>Код країни складається обов'зязково з двох латинських літер нижнього регістру (малих). Також він обов'язково має бути існуючим.</span>
         </div>
         <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення коментарів (23.08.2024 / 12:26)</span>
