--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -23,6 +23,11 @@
             </div>
         </div>
         <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px; color: #FF705C;">Увага!</span>
+            <span>Не забувайте очищати кеш коли додано нове оновлення! (ctrl + F5). Так як деякі ресурси сайту кешуються браузером і можуть бути не актуальними.</span>
+            <span>Це необхідна дія після кожного оновлення, щоб уникнути багів та помилок відображення сторінок сайту.</span>
+        </div>
+        <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення підприємств (23.08.2024 / 21:47)</span>
             <span>Додано нове поле до сутності підприємства - "Код країни". Це поле відповідає за відображення прапору країни у списку підприємств, та на сторінці визначеного підприємства.</span>
             <span>Код країни складається обов'зязково з двох латинських літер нижнього регістру (малих). Також він обов'язково має бути існуючим.</span>
