--- a/Views/EnterpriseEdit/EnterpriseEdit.cshtml
+++ b/Views/EnterpriseEdit/EnterpriseEdit.cshtml
@@ -69,11 +69,11 @@
             </div>
             <div class="form-container-row">
                 <div class="header-row"><span>Форма власності (Укр.): </span></div>
-                @Html.TextBoxFor(m => m.OwnershipFormUA, new { placeholder = "Форма власності українською (Повністю)", @class = "data-input", required = "required" })
+                @Html.TextBoxFor(m => m.OwnershipFormUA, new { placeholder = "Форма власності українською", @class = "data-input", required = "required" })
             </div>
             <div class="form-container-row">
                 <div class="header-row"><span>Форма власності (Англ.): </span></div>
-                @Html.TextBoxFor(m => m.OwnershipFormEN, new { placeholder = "Форма власності англійською (Повністю)", @class = "data-input", required = "required" })
+                @Html.TextBoxFor(m => m.OwnershipFormEN, new { placeholder = "Форма власності англійською", @class = "data-input", required = "required" })
             </div>
             <div class="form-container-row">
                 <div class="header-row"><span>ЄДРПОУ: </span></div>
