--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -28,6 +28,10 @@
             <span>Це необхідна дія після кожного оновлення, щоб уникнути багів та помилок відображення сторінок сайту.</span>
         </div>
         <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення завантажень (31.08.2024 / 12:47)</span>
+            <span>Додано завантаження інструкції та зразків по простому натиску на піктограму знака питання.</span>
+        </div>
+        <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Фікси (26.08.2024 / 12:19)</span>
             <span>Виправлено помилку редагування коментаря. Виправлено відображення стрілок сортування у списках. Виправлено пошук та сортування на сторінці підприємства.</span>
         </div>
