--- a/Views/EnterpriseDetails/EnterpriseDetails.cshtml
+++ b/Views/EnterpriseDetails/EnterpriseDetails.cshtml
@@ -203,8 +203,8 @@
         }
 
         .select-checkbox label span{
-            padding: 2px 0 0 5px;
-                    color: #595586;
+            padding: 0 0 0 5px;
+            color: #595586;
         }
 
         .card-data {
