--- a/Views/OrderAddContacts/OrderAddContacts.cshtml
+++ b/Views/OrderAddContacts/OrderAddContacts.cshtml
@@ -145,9 +145,9 @@
                 justify-content: center;
             }
 
-                .select-checkbox label span {
-                    padding: 2px 0 0 5px;
-                }
+            .select-checkbox label span {
+                padding: 0 0 0 5px;
+            }
     </style>
 </head>
 <body>
