--- a/Views/OrderList/OrderList.cshtml
+++ b/Views/OrderList/OrderList.cshtml
@@ -85,6 +85,7 @@
             background-color: white;
             outline: none;
             border: none;
+            height: 26px;
         }
 
             .filter select option {
@@ -100,6 +101,7 @@
             justify-content: flex-start;
             align-items: center;
             gap: 5px;
+            height: 26px;
         }
 
         .date-picker-part {
