--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -28,6 +28,24 @@
             <span>Це необхідна дія після кожного оновлення, щоб уникнути багів та помилок відображення сторінок сайту.</span>
         </div>
         <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення замовлень (04.09.2024 / 13:44)</span>
+            <span>Додано новий розділ на сторінці вибраного замовлення - "Бухгалтерія". За допомогою цього розділу можна відправити рахунок на електрону пошту для бухглатерії.</span>
+            <span>Для цього необхідно вказати отримувача, якщо потрібен додатковий отримувач, вказати його теж. Далі додати коментар якщо потрібно, обрати курс. Наступним кроком обрати чи включати доставку у ціну кожної позиції, чи ні. Якщо доставка включена, то вона попозиційно додається до ціни обладнання, якщо ні - то буде відображатися окремою строкою таблиці.</span>
+            <span>Доставку перед надсиланням можна змінити. При зміні вартості доставки, якщо ввімкнено попозиційне розподілення доставки, вона також попозиційно та пропорційно зміниться і буде включена у ціну обладнання.</span>
+        </div>
+        <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення каталогу (03.09.2024 / 17:54)</span>
+            <span>Покращено пошук для найменування обладнання у каталозі. Тепер при пошуку не обов'язково вводити спеціальні символи (Дюйм, слеш, тире і так далі).</span>
+        </div>
+        <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Фікси (02.09.2024 / 11:56)</span>
+            <span>Виправлено помилку відображення зображення обладнання, при відкритті з списку обладнання в замовленні.</span>
+        </div>
+        <div class="card-data">
+            <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення каталогу та списку контактів (02.09.2024 / 10:07)</span>
+            <span>Додано рік оновлення прайсу у форматі (yyyy) для позиції каталогу. Додано можливість пошуку контактів за підприємством у списку контактів, використовуючи загальний пошук.</span>
+        </div>
+        <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення завантажень (31.08.2024 / 12:47)</span>
             <span>Додано завантаження інструкції та зразків по простому натиску на піктограму знака питання.</span>
         </div>
