--- a/Views/OrderEquipmentDetails/OrderEquipmentDetails.cshtml
+++ b/Views/OrderEquipmentDetails/OrderEquipmentDetails.cshtml
@@ -66,21 +66,24 @@
             width: 350px;
         }
 
-        .details-container img {
-            border-radius: 50%;
-            height: 85px;
-            width: 85px;
-        }
-
         .details-container-header {
             display: flex;
             flex-direction: row;
             gap: 20px;
-            font-size: 14px;
-            font-weight: bold;
             align-items: center;
             width: 100%;
         }
+
+            .details-container-header a{
+                color: #595586;
+                font-weight: bold;
+                font-size: 14px;
+                text-decoration: none;
+            }
+
+                .details-container-header a:hover{
+                    color: #4962E9;
+                }
 
         .details-container-data-row-underlined{
             display: flex;
@@ -204,6 +207,13 @@
             font-size: 12px;
             color: #595586;
         }
+
+        .details-container img {
+            border-radius: 50%;
+            height: 85px;
+            width: 85px;
+            flex-shrink: 0;
+        }
     </style>
 </head>
 <body>
@@ -233,7 +243,7 @@
                     {
                         <img src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.OrderPosition.Image!))">
                     }
-                    <span>@Model.OrderPosition.NameUA</span>
+                    <a href="@Url.ActionLink("CatalogDetails", "CatalogDetails", new{ EntityId = Model.OrderPosition.EquipmentCatalogPositionId })">@Model.OrderPosition.NameUA</a>
                 </div>
                 <div class="details-container-data">
                     @using (Html.BeginForm("OrderEquipmentUpdate", "OrderEquipmentUpdate", FormMethod.Post, new{ @class="percent-container"}))
