--- a/Views/PatchNotes/PatchNotes.cshtml
+++ b/Views/PatchNotes/PatchNotes.cshtml
@@ -30,7 +30,7 @@
         <div class="card-data">
             <span style="font-weight: 600; font-size: 16px; margin-bottom: 5px;">Оновлення замовлень (04.09.2024 / 13:44)</span>
             <span>Додано новий розділ на сторінці вибраного замовлення - "Бухгалтерія". За допомогою цього розділу можна відправити рахунок на електрону пошту для бухглатерії.</span>
-            <span>Для цього необхідно вказати отримувача, якщо потрібен додатковий отримувач, вказати його теж. Далі додати коментар якщо потрібно, обрати курс. Наступним кроком обрати чи включати доставку у ціну кожної позиції, чи ні. Якщо доставка включена, то вона попозиційно додається до ціни обладнання, якщо ні - то буде відображатися окремою строкою таблиці.</span>
+            <span>Для цього необхідно вказати отримувача, якщо потрібен додатковий отримувач, вказати його теж. Далі додати коментар якщо потрібно, обрати курс. Наступним кроком обрати чи включати доставку у ціну кожної позиції, чи ні. Якщо доставка включена, то вона попозиційно додається до ціни обладнання, якщо ні - то не буде відображатися у таблиці і не буде додана у ціну обладнання.</span>
             <span>Доставку перед надсиланням можна змінити. При зміні вартості доставки, якщо ввімкнено попозиційне розподілення доставки, вона також попозиційно та пропорційно зміниться і буде включена у ціну обладнання.</span>
         </div>
         <div class="card-data">
